# didactic-octo-waffle

./: .env.example  .gitignore  Procfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_password_reset_tokens.py  003_script_scenes.py
app/: __init__.py  config.py  dependencies.py  main.py
app/core/: __init__.py  exceptions.py  oauth_state.py  security.py  token_encryption.py
app/db/: base.py
app/schemas/: asset.py  auth.py  episode.py  script_scenes.py  series.py  settings.py  social.py  voice_music.py  workspace.py
app/services/: auth_service.py  avatar_service.py  credits_service.py  email_service.py  generation_service.py  image_service.py  lipsync.py  llm_service.py  platform_publish.py  schedule_slots.py  series_service.py  social_oauth_service.py  storage_service.py  tts_service.py
app/utils/: __init__.py  ffmpeg_filters.py
app/workers/: celery_app.py
docs/schemas/: dialogue_expansion.schema.json  (+7 more)
reel_engine/: __main__.py  captions.py  config.py  cost_model.py  image_gen.py  main.py  music.py  narration_llm.py  prompt_builder.py  story.py  style_presets.py  utils.py  video_ffmpeg.py  voice_openai.py
scripts/: check_elevenlabs_env.py  clear_db_and_bucket.py  create_series_test.py  install-git-hooks.sh  list_elevenlabs_voices.py  presign_video_url.py  test_avatar_generation.py  test_story_generation.py  test_story_images.py  test_story_tts.py
static/: demo.html
tests/: run_cheap_tests.py  test_lipsync_service.py  test_media_voice_and_tts.py  test_render_zoompan.py  test_script_scenes.py
(+35 files in other folders)
